style: fix red heroTag width by setting align-items flex-start on heroText

--- a/src/app/[lang]/about/aboutPage.module.css
+++ b/src/app/[lang]/about/aboutPage.module.css
@@ -34,6 +34,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  align-items: flex-start;
   height: 100%;
   width: 100%;
 }
