--- a/src/app/[lang]/coating/coatingPage.module.css
+++ b/src/app/[lang]/coating/coatingPage.module.css
@@ -43,6 +43,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  align-items: flex-start;
   height: 100%;
   width: 100%;
 }
